--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
- 
+
   <groupId>com.socgen.digital.agence</groupId>
   <artifactId>entree-en-relation-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
- 
+
   <name>eer-api</name>
 
   <properties>
-    <project.reasteasy.version>3.0.19.Final</project.reasteasy.version>
-    <version.wildfly-swarm>2016.10.0</version.wildfly-swarm>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <version.postgresql>9.4.1207</version.postgresql>
+      <version.h2>1.4.187</version.h2>
+      <version.wildfly-swarm>2016.10.0</version.wildfly-swarm>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
+  <resources>
+      <resource>
+          <directory>src/main/resources</directory>
+          <filtering>true</filtering>
+      </resource>
+  </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -26,47 +33,84 @@
           <warName>eer-api</warName>
         </configuration>
       </plugin>
-
-        <!-- https://mvnrepository.com/artifact/org.wildfly.swarm/wildfly-swarm-plugin -->
+    <plugin>
+        <groupId>org.wildfly.swarm</groupId>
+        <artifactId>wildfly-swarm-plugin</artifactId>
+        <version>${version.wildfly-swarm}</version>
+        <configuration>
+            <mainClass>com.socgen.application.digital.Main</mainClass>
+        </configuration>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>package</goal>
+                </goals>
+            </execution>
+            <execution>
+                <id>package</id>
+            </execution>
+            <execution>
+                <id>start</id>
+            </execution>
+            <execution>
+                <id>stop</id>
+            </execution>
+        </executions>
+    </plugin>
         <plugin>
-            <groupId>org.wildfly.swarm</groupId>
-            <artifactId>wildfly-swarm-plugin</artifactId>
-            <version>${version.wildfly-swarm}</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>package</goal>
-                    </goals>
-                </execution>
-            </executions>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
         </plugin>
 
     </plugins>
   </build>
 
-
-
   <dependencies>
+      <dependency>
+          <groupId>org.wildfly.swarm</groupId>
+          <artifactId>jaxrs-cdi</artifactId>
+          <version>${version.wildfly-swarm}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.wildfly.swarm</groupId>
+          <artifactId>jpa</artifactId>
+          <version>${version.wildfly-swarm}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.wildfly.swarm</groupId>
+          <artifactId>transactions</artifactId>
+          <version>${version.wildfly-swarm}</version>
+      </dependency>
+
+
+
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>${version.postgresql}</version>
+      </dependency>
+
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
       </dependency>
-
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.11</version>
       </dependency>
-
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.14.8</version>
       </dependency>
-
-
-
       <dependency>
         <groupId>javax</groupId>
         <artifactId>javaee-api</artifactId>
@@ -75,11 +119,4 @@
     </dependency>
   </dependencies>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>my-repo2</id>
-            <name>your custom repo</name>
-            <url>http://jarsm2.dyndns.dk</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
