Variabilisation des environnements --APR

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
   <artifactId>entree-en-relation-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>eer-api</name>
 
   <properties>
@@ -23,53 +22,53 @@
           <filtering>true</filtering>
       </resource>
   </resources>
-  <plugins>
-  <plugin>
-      <!-- http://mydevnotes.nicus.it/2013/03/generate-ddl-with-maven-jpa-hibernate-4.html -->
-      <groupId>de.juplo</groupId>
-      <artifactId>hibernate4-maven-plugin</artifactId>
-      <version>1.1.0</version>
-      <configuration>
-          <hibernateDialect>org.hibernate.dialect.PostgreSQLDialect</hibernateDialect>
-          <delimiter>;</delimiter>
-          <target>SCRIPT</target>
-          <outputFile>${project.build.directory}/schema-hibernate4-maven-plugin.sql</outputFile>
-      </configuration>
-  </plugin>
-    <plugin>
-        <groupId>org.wildfly.swarm</groupId>
-        <artifactId>wildfly-swarm-plugin</artifactId>
-        <version>${version.wildfly-swarm}</version>
+    <plugins>
+        <plugin>
+          <!-- http://mydevnotes.nicus.it/2013/03/generate-ddl-with-maven-jpa-hibernate-4.html -->
+          <groupId>de.juplo</groupId>
+          <artifactId>hibernate4-maven-plugin</artifactId>
+          <version>1.1.0</version>
+          <configuration>
+              <hibernateDialect>org.hibernate.dialect.PostgreSQLDialect</hibernateDialect>
+              <delimiter>;</delimiter>
+              <target>SCRIPT</target>
+              <outputFile>${project.build.directory}/schema-hibernate4-maven-plugin.sql</outputFile>
+          </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.wildfly.swarm</groupId>
+            <artifactId>wildfly-swarm-plugin</artifactId>
+            <version>${version.wildfly-swarm}</version>
+                <configuration>
+                    <mainClass>com.socgen.application.digital.Main</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>package</id>
+                    </execution>
+                    <execution>
+                        <id>start</id>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                    </execution>
+                </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
             <configuration>
-                <mainClass>com.socgen.application.digital.Main</mainClass>
+                <source>1.8</source>
+                <target>1.8</target>
             </configuration>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>package</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>package</id>
-                </execution>
-                <execution>
-                    <id>start</id>
-                </execution>
-                <execution>
-                    <id>stop</id>
-                </execution>
-            </executions>
-    </plugin>
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-        </configuration>
-    </plugin>
-</plugins>
+        </plugin>
+    </plugins>
   </build>
 
   <dependencies>
@@ -78,33 +77,32 @@
           <artifactId>jaxrs-cdi</artifactId>
           <version>${version.wildfly-swarm}</version>
       </dependency>
-
       <dependency>
           <groupId>org.wildfly.swarm</groupId>
           <artifactId>jpa</artifactId>
           <version>${version.wildfly-swarm}</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.wildfly.swarm</groupId>
+                  <artifactId>h2</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
-
       <dependency>
           <groupId>org.wildfly.swarm</groupId>
           <artifactId>transactions</artifactId>
           <version>${version.wildfly-swarm}</version>
       </dependency>
-
       <dependency>
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
           <version>${version.h2}</version>
       </dependency>
-
-
-
       <dependency>
           <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
           <version>${version.postgresql}</version>
       </dependency>
-
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
